Fix CSS wrapping issue on mobile of code block
When remix text + username got too long for screen it would overflow and
squish the code block. This fixes that issue by playing with the dark
magic that is CSS flow rules.

--- a/dwitter/static/main.css
+++ b/dwitter/static/main.css
@@ -238,6 +238,8 @@ input.comment-submit:active {
 
 .author-remix-wrapper{
   padding: 10px 0;
+  display: inline-block;
+  width: 100%;
 }
 
 .dweet-author {
@@ -569,7 +571,7 @@ body.random .top-sort-list a.random {
 }
 
 .dark-section {
-  margin: 20px -15px -15px;
+  margin: 10px -15px -15px;
   background: #222;
   padding: 15px;
   overflow: hidden;
